--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bid-scaffold",
-  "version": "0.0.2",
+  "name": "trakkerapp",
+  "version": "0.0.1",
   "private": true,
   "engines": {
     "node": ">= 0.8.14",
@@ -12,7 +12,9 @@
     "express": ">= 3.1.0",
     "jade": ">= 0.28.2",
     "nconf": ">= 0.6.7",
-    "express-persona": "git://github.com/jbuck/express-persona.git"
+    "express-persona": "git://github.com/jbuck/express-persona.git",
+    "trakker": ">= 0.0.4",
+    "sequelize": "1.6.0-beta4"
   },
   "devDependencies": {
     "mocha": ">= 1.8.1",
