--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nconf": ">= 0.6.7",
     "express-persona": "git://github.com/jbuck/express-persona.git",
     "trakker": ">= 0.0.4",
-    "sequelize": "1.6.0-beta4"
+    "sequelize": "1.6.0-beta4",
+    "gravatar": "1.0.6"
   },
   "devDependencies": {
     "mocha": ">= 1.8.1",
