--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-persona": "git://github.com/jbuck/express-persona.git",
     "trakker": ">= 0.0.4",
     "sequelize": "1.6.0-beta4",
-    "gravatar": "1.0.6"
+    "gravatar": "1.0.6",
+    "nunjucks": "git://github.com/jlongster/nunjucks.git"
   },
   "devDependencies": {
     "mocha": ">= 1.8.1",
