--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-persona": "git://github.com/jbuck/express-persona.git",
     "trakker": ">= 0.0.5",
     "sequelize": "1.6.0-beta4",
-    "nunjucks": "git://github.com/jlongster/nunjucks.git"
+    "nunjucks": "git://github.com/jlongster/nunjucks.git",
+    "sanitizer": ">=0.0.15"
   },
   "devDependencies": {
     "mocha": ">= 1.8.1",
