--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "npm": "1.1.x"
   },
   "dependencies": {
-    "client-sessions": ">= 0.0.9",
-    "connect": ">= 2.7.3",
-    "express": ">= 3.1.0",
-    "jade": ">= 0.28.2",
-    "nconf": ">= 0.6.7",
+    "client-sessions": "0.1.1",
+    "connect": "2.7.6",
+    "express": "3.1.0",
+    "jade": "0.28.2",
+    "nconf": "0.6.7",
     "express-persona": "git://github.com/jbuck/express-persona.git",
-    "trakker": ">= 0.0.5",
-    "sequelize": "1.6.0-beta4",
+    "trakker": "0.0.5",
+    "mysql": "2.0.0-alpha7",
+    "sequelize": "1.6.0",
     "nunjucks": "git://github.com/jlongster/nunjucks.git",
-    "sanitizer": ">=0.0.15"
+    "sanitizer": "0.0.15"
   },
   "devDependencies": {
     "mocha": ">= 1.8.1",
