--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "1.1.x"
   },
   "dependencies": {
-    "client-sessions": "0.1.1",
+    "client-sessions": ">= 0.3.1",
     "connect": "2.7.6",
     "express": "3.1.0",
     "jade": "0.28.2",
